# ra-task-ads-guangqinweng

./: .env.example  .gitignore  README.md  pyproject.toml  verification_report.md
.github/workflows/: ci.yml
artifacts/baselines/v1/: annual_ai_share.csv  labels_cache.jsonl  reliability_metrics.json
artifacts/baselines/v2/: ai_scores.csv  (+4 more)
artifacts/llm/: adjudication_cache.jsonl  audit_cache.jsonl  request_manifest.csv
artifacts/manifests/: file_manifest.csv  run_metadata.json
artifacts/review/: company_match_candidates.csv  company_match_review.csv  reliability_metrics.json  reliability_sample.csv  v1_v2_annual_comparison.csv  v1_v2_label_comparison.csv  v1_v2_summary.json  v2_v2_1_annual_comparison.csv  v2_v2_1_label_comparison.csv  v2_v2_1_summary.json
config/: ai_rubric.yaml  ai_rubric_v2_1.yaml  company_aliases.csv  llm_v2_1_boundary_cases.yaml
data/interim/: duplicate_map.csv
data/processed/: cleaned_ads.csv  valid_firms.csv
data/raw/: ra_task_firms.csv
docs/: completion_audit.md
docs/plans/: 2026-06-27-001-feat-ra-task-analysis-plan.md
output/pdf/: 人工盲审核心编码手册_v2.1.tex
outputs/: ai_scores.csv  annual_ai_share.csv  company_matches.csv
reports/: ra_task_report.html  ra_task_report.md  ra_task_report.qmd
src/ra_task/: __init__.py  analysis.py  cleaning.py  cli.py  human_evaluation.py  llm_labeling.py  matching.py  pipeline.py  prompt_evaluation.py
tests/: test_analysis.py  test_cleaning.py  test_cli.py  test_human_evaluation.py  test_llm_labeling.py  test_matching.py  test_pipeline.py  test_prompt_evaluation.py  test_quality_gates.py
(+52 files in other folders)
