[project]
name = "ra-task-ads"
version = "0.1.0"
description = "清华经管研究助理招聘广告数据分析"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.9",
  "numpy>=2.0",
  "openai>=2.0",
  "pandas>=2.2",
  "pydantic>=2.9",
  "pyyaml>=6.0",
  "rapidfuzz>=3.10",
]

[project.scripts]
ra-task = "ra_task.cli:main"

[dependency-groups]
dev = ["pytest>=8.3", "pytest-cov>=6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ra_task"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
